fix image width overflow on mobile

--- a/main.css
+++ b/main.css
@@ -8,5 +8,6 @@ body {
 }
 
 .blog-image {
+    width: 100%;
     max-width: 600px;
 }
